--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -4,7 +4,7 @@ services:
 
   php-fpm:
     image: php-fpm
-    container_name: laravel
+    container_name: vk-hack-laravel
     build: ./docker/php-fpm
     volumes:
       - ./:/var/www
@@ -15,7 +15,7 @@ services:
     build:
       context: ./docker/nginx
       dockerfile: local/Dockerfile
-    container_name: nginx
+    container_name: vk-hack-nginx
     depends_on:
       - php-fpm
     ports:
@@ -25,7 +25,7 @@ services:
 
   sql:
     image: postgres:latest
-    container_name: sql
+    container_name: vk-hack-sql
     restart: unless-stopped
     volumes:
       - mysql:/var/lib/mysql
@@ -38,7 +38,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
-    container_name: elasticsearch
+    container_name: vk-hack-elasticsearch
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
@@ -55,7 +55,7 @@ services:
 
   redis:
     image: redis:latest
-    container_name: redis
+    container_name: vk-hack-redis
     ports:
       - 63791:6379
 
