--- a/package.json
+++ b/package.json
@@ -17,13 +17,9 @@
     "license": "MIT",
     "devDependencies": {
         "cross-env": "^5.2.1",
-        "eslint": "^7.14.0",
-        "eslint-loader": "^4.0.2",
-        "eslint-plugin-react": "^7.21.5",
         "laravel-mix": "^5.0.1",
         "react-hot-loader": "^4.13.0",
         "react-scripts": "^3.4.4",
-        "vue-template-compiler": "^2.6.12",
         "webpack-cli": "^4.2.0"
     },
     "dependencies": {
@@ -31,15 +27,12 @@
         "@vkontakte/vk-bridge": "^2.3.0",
         "@vkontakte/vk-miniapps-deploy": "0.0.17",
         "@vkontakte/vkui": "^3.13.1",
-        "babel-eslint": "^10.1.0",
         "chalk": "^2.4.2",
         "core-js": "^3.7.0",
-        "eruda": "^2.4.1",
-        "eruda-code": "^2.0.0",
-        "eruda-dom": "^2.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.14.0",
-        "react-dom": "^16.14.0"
+        "react-dom": "^16.14.0",
+        "vkui-horizontal-calendar": "^1.0.4"
     },
     "browserslist": {
         "production": [
