--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ COMPOSE_FILE=docker-compose.local.yml:docker-compose-queues.yml
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
+ABIOS_CLIENT=pavel-volkov
+ABIOS_SECRET=
+
 DB_CONNECTION=pgsql
 DB_HOST=sql
 DB_DATABASE=vk
