--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "npm run development",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js  --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
         "watch": "npm run development -- --watch",
