--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "prop-types": "^15.7.2",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
-        "vkui-horizontal-calendar": "^1.0.4"
+        "vkui-horizontal-calendar": "^1.0.4",
+        "luxon": "^1.25.0"
     },
     "browserslist": {
         "production": [
