--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "devDependencies": {
         "cross-env": "^5.2.1",
         "laravel-mix": "^5.0.1",
+        "less": "^3.12.2",
+        "less-loader": "^7.1.0",
         "react-hot-loader": "^4.13.0",
         "react-scripts": "^3.4.4",
         "webpack-cli": "^4.2.0"
